--- a/src/main/webapp/WEB-INF/log4j.properties
+++ b/src/main/webapp/WEB-INF/log4j.properties
@@ -1,5 +1,5 @@
 ################ FATAL, ERROR, WARN, INFO, DEBUG
-log4j.rootLogger=WARN,stdout,D,E
+log4j.rootLogger=WARN,stdout,D,ERROR
 
 ### stdout ###
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -10,7 +10,7 @@ log4j.appender.stdout.layout.ConversionPattern= %d{ABSOLUTE} %5p %c{1}:%L - %m%n
 ### logFile ###
 ### save error to another file ###
 log4j.appender.D=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.D.File=D:/logs/roseonly-error.log
+log4j.appender.D.File=D:/logs/bicycle-error.log
 log4j.appender.D.Append=true
 #error only in this file
 log4j.appender.D.Threshold =WARN
