增加商品管理

--- a/src/main/webapp/WEB-INF/log4j.properties
+++ b/src/main/webapp/WEB-INF/log4j.properties
@@ -1,5 +1,5 @@
 ################ FATAL, ERROR, WARN, INFO, DEBUG
-log4j.rootLogger=WARN,stdout,D,ERROR
+log4j.rootLogger=WARN,stdout,D
 
 ### stdout ###
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
