增加商品添加

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,16 @@
       <artifactId>slf4j-nop</artifactId>
       <version>1.7.6</version>
     </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.2.1</version> <!-- makesure correct version here -->
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>1.4</version>
+    </dependency>
   </dependencies>
 
   <build>
